<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/userProfileFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/UserRecipesList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <include
                android:id="@+id/usersImage"
                layout="@layout/profile_picture_layout"
                android:layout_width="111dp"
                android:layout_height="111dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/UsernameDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/username"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="2sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintStart_toEndOf="@+id/usersImage"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/UserEmailDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/email"
                app:autoSizeMaxTextSize="100sp"
                app:autoSizeMinTextSize="2sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:layout_constraintStart_toEndOf="@+id/usersImage"
                app:layout_constraintTop_toBottomOf="@+id/UsernameDisplay" />

            <ToggleButton
                android:id="@+id/subscribeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="5dp"
                android:textOff="@string/subscribe"
                android:textOn="@string/subscribed"
                android:minHeight="30dp"
                android:background="@drawable/subscribe_button_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/usersImage" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingBottom="20dp"
                app:layout_constraintTop_toBottomOf="@+id/usersImage">

                <ImageView
                    android:id="@+id/cuistot_achievement"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/followed_achievement"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/cuistot_none"
                    android:contentDescription="@string/cuistot_achievement" />

                <ImageView
                    android:id="@+id/followed_achievement"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/favorite_achievement"
                    app:layout_constraintStart_toEndOf="@+id/cuistot_achievement"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/followed_none"
                    android:contentDescription="@string/followed_achievement" />

                <ImageView
                    android:id="@+id/favorite_achievement"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/followed_achievement"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/favorite_none"
                    android:contentDescription="@string/favourite_achievement" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/no_recipe_user_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_recipe"
            android:layout_marginTop="25dp"
            android:visibility="gone"
            android:textSize="36sp"
            android:layout_gravity="center"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/UserRecipesList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>