...
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/ic_star_black_grey"
            android:title="@string/Favourites" />

        <item
            android:id="@+id/nav_subscriptions"
            android:icon="@drawable/ic_person_add_black_24dp"
            android:title="@string/Subscriptions" />

        <item
            android:id="@+id/nav_subscribers"
            android:icon="@drawable/ic_person_black_24dp"
...
