...
    android:paddingTop="@dimen/drawer_vertical_margin"
    android:paddingRight="@dimen/drawer_horizontal_margin"
    android:paddingBottom="@dimen/drawer_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <include
        android:id="@+id/drawerProfileImage"
        layout="@layout/profile_picture_layout"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
...
